<resources>
    <string name="app_name">HomeWork</string>
    <string name="register">登录</string>
    <string name="title">登录</string>
    <string name="welcome">你好，欢迎来到知乎日报！</string>
    <string name="enroll">没有账号？立即注册</string>
    <string name="back">返回</string>
    <string name="enroll1">注册</string>
    <string name="weibo1">微博登录</string>
    <string name="wechat1">微信登录</string>
    <string name="user_name">请输入账号</string>
    <string name="passwoed">请输入密码</string>
    <string name="sure_password">再次输入密码</string>
</resources>
